<resources>
    <string name="app_name">Daily APOD Wallpaper</string>
    <string name="metadata_bar_checked">APOD for %s (checked: %s)\n© %s</string>
    <string name="metadata_bar">APOD for %s © %s</string>
    <string name="loading_message">Loading APOD...</string>
    <string name="checked_too_recently">Checked too recently, please try again %s!</string>
    <string name="last_apod_check">Last APOD check</string>
    <string name="last_apod_pulled">Last APOD pulled</string>
    <string name="last_automatic_task_run">Last automatic task run</string>
    <string name="last_automatic_task_success">Last automatic task success</string>
    <string name="last_manual_task_run">Last manual task run</string>
    <string name="last_manual_task_success">Last manual task success</string>
    <string name="last_filtered_date">Last rejected APOD</string>
    <string name="last_filtered_reason">Last rejection reason</string>
    <string name="last_sync_fix_date">Last sync time autofix</string>
    <string name="images_saved">Images saved</string>
    <string name="image_cache_size">Image cache size</string>

    <string name="sharing_question">How would you like to share \"%s\"?</string>
    <string name="sharing_url_hd">HD URL</string>
    <string name="sharing_url">URL</string>
    <string name="sharing_image">Image</string>
    <string name="sharing_title">Share "%s" to:</string>
    <string name="notification_channel_name">Daily APOD notifications</string>
    <string name="apod_not_image">%s\n\nUnfortunately this APOD isn\'t an image, so cannot be shown in %s. Here\'s the
        associated URL:\n%s
    </string>
    <string name="manual_set_title">Choose target</string>
    <string name="manual_set_message">What do you want to use \"%s\" for?\n\nMake sure to turn off \"Automatic
        checking\" in the settings if you don\'t want it to be replaced!
    </string>
    <string name="manual_set_lockscreen">Lock Screen</string>
    <string name="manual_set_wallpaper">Wallpaper</string>
    <string name="manual_set_cancel">Cancel</string>
    <string name="error_quota_hit">Your API key is currently at capacity! Please use a custom key in settings, or wait
        an hour.
    </string>
    <string name="error_no_response">The APOD API failed to respond! Please try again later.</string>
    <string name="error_generic_retrieval_failure">Failed to retrieve APOD: %s</string>
    <string name="error_image_too_large">Image is too large to be displayed (> 100MB)! Try turning off HD images &amp;
        clearing cache!
    </string>
    <string name="error_image_not_found">The image could not be found. This is generally caused by the underlying file system making changes without notifying the app.\n\nIf you did not intentionally delete the image files, please contact apod@jakelee.co.uk!</string>
    <string name="deleted_all_images">Deleted all past images!</string>

    <string name="lockscreen_set">Set \"%s\" as your lock screen!</string>
    <string name="wallpaper_set">Set \"%s\" as your wallpaper!</string>
    <string name="settings_title">Settings</string>
    <string name="error_invalid_api_key">Invalid API key! Please try entering it again</string>
    <string name="no_api_key_set">No key set, tap to change</string>
    <string name="api_key_custom_remaining">Your API key has %s requests left this hour.</string>
    <string name="api_key_remaining">There are %s requests remaining this hour for the default API key. Use a custom one
        for increased reliability!
    </string>
    <string name="share_title">Share \"%s\" to:</string>
    <string name="error_returned_apod_format">Returned APOD isn\'t formatted correctly!</string>
    <string name="override_preferences">Image wouldn\'t usually be set due to %s, applying anyway!</string>
    <string name="custom_key_enabled_desc">A custom API key ensures reliability, as no usage limits will be reached.
    </string>
    <string name="custom_key_enabled_title">Use custom APOD API key</string>
    <string name="custom_key_title">No key set, tap to change</string>
    <string name="custom_key_desc">Your custom API key can be requested from\nhttps://api.nasa.gov/</string>
    <string name="show_description_title">Show full description</string>
    <string name="show_description_desc">When enabled, the full APOD description will be shown. Tap description to
        toggle!
    </string>
    <string name="use_hd_images_title">Use HD images</string>
    <string name="use_hd_images_desc">When enabled, HD images will be used. Some of these are too large to be displayed
        in the app, but still work as wallpapers!
    </string>
    <string name="use_greyscale_images_title">Use greyscale images</string>
    <string name="use_greyscale_images_desc">When enabled, all images will be converted to black and white before being used. Only applies to new images.</string>
    <string name="category_app_options">App options</string>
    <string name="category_automatic_checking">Automatic checking</string>
    <string name="automatic_enabled_title">Enable</string>
    <string name="automatic_enabled_desc">When enabled, new wallpapers will be regularly checked for.</string>
    <string name="automatic_check_wifi_title">WiFi only</string>
    <string name="automatic_check_wifi_desc">When enabled, checks will only occur when on WiFi.</string>
    <string name="automatic_check_time_title">Check time</string>
    <string name="automatic_check_time_desc">Determines which hour of the day the APOD check should occur.</string>
    <string name="automatic_check_variation_title">Variation (minutes)</string>
    <string name="automatic_check_variation_desc">Determines how many minutes earlier or later the OS can modify the check time by. Higher = better battery, as the OS can optimise scheduling.</string>
    <string name="automatic_check_fix_title">Automatically fix check time</string>
    <string name="automatic_check_fix_desc">If a daily task is delayed, the check time can become later than usual. Enabling this will fix that.</string>
    <string name="category_image_filtering">Image filtering</string>
    <string name="filtering_enabled_title">Enable</string>
    <string name="filtering_enabled_desc">When enabled, images will be quality checked before being applied. Make sure to enable \"Use HD images\" if you set high minimum sizes!</string>
    <string name="filtering_width_title">Minimum width (px)</string>
    <string name="filtering_width_desc">How many pixels wide must an image be to be applied.</string>
    <string name="filtering_height_title">Minimum height (px)</string>
    <string name="filtering_height_desc">How many pixels high must an image be to be applied.</string>
    <string name="filtering_ratio_enabled_title">Enable ratio filtering</string>
    <string name="filtering_ratio_enabled_desc">Enable filtering images by maximum width/height ratio.</string>
    <string name="filtering_ratio_title">Maximum width/height ratio (%)</string>
    <string name="filtering_ratio_desc">50%: Width can be at most half height.\n100%: Width can be at most equal to height.\n200%: Width can be at most 2x height.</string>
    <string name="category_targets">Targets</string>
    <string name="wallpaper_enabled_title">Wallpaper</string>
    <string name="wallpaper_enabled_desc">When enabled, your wallpaper image will be set when a new image is found.
    </string>
    <string name="lockscreen_enabled_title">Lock screen</string>
    <string name="lockscreen_enabled_desc">When enabled, your lock screen image will be set when a new image is found.
    </string>
    <string name="category_notifications">Notifications</string>
    <string name="notifications_enabled_title">Enable</string>
    <string name="notifications_enabled_desc">When enabled, you will receive notifications when a new image has been
        downloaded.
    </string>
    <string name="notifications_instant_title">Preview notification</string>
    <string name="notifications_instant_desc">Display a notification now to check your settings.</string>
    <string name="notifications_led_title">LED</string>
    <string name="notifications_led_desc">When enabled, the notification will light up your LED (if available).</string>
    <string name="notifications_colour_title">LED Colour: %s</string>
    <string name="notifications_colour_desc">Choose the colour your LED will light up when a notification is received.</string>
    <string name="notifications_sound_title">Sound</string>
    <string name="notifications_sound_desc">When enabled, the notification will make a little beep noise.</string>
    <string name="notifications_vibrate_title">Vibrate</string>
    <string name="notifications_vibrate_desc">When enabled, the notification will vibrate once.</string>
    <string name="notifications_preview_title">Rich previews</string>
    <string name="notifications_preview_desc">When enabled, the notification can be expanded to view the image, instead of the description.</string>
    <string name="category_additional_actions">Additional actions</string>
    <string name="delete_images_title">Delete all saved images</string>
    <string name="delete_images_desc">Delete all saved images (except current) to free up space.</string>
    <string name="test_jobs_title">Test job scheduling</string>
    <string name="test_jobs_desc">Schedule an example notification in 50 to 70 seconds, to check job scheduling works.</string>
    <string name="view_status_title">View status</string>
    <string name="view_status_desc">View current status of the app.</string>
    <string name="view_quota_title">View quota</string>
    <string name="view_quota_desc">View current API quota.</string>
    <string name="view_source_title">View source</string>
    <string name="view_source_desc">View complete app source code.</string>
    <string name="feedback_title">Give app feedback</string>
    <string name="feedback_desc">Bugs / suggestions / anything else?</string>
    <string name="repo_url">https://www.github.com/JakeSteam/APODWallpaper</string>
    <string name="give_feedback_title">How would you like to give feedback?</string>
    <string name="give_feedback_playstore">Play Store</string>
    <string name="give_feedback_email">Email</string>
    <string name="ok">OK</string>
    <string name="give_feedback_email_title">Send feedback using:</string>
    <string name="give_feedback_email_address">mailto:apod@jakelee.co.uk</string>
    <string name="version_summary">Version #%d built on %s</string>
    <string name="give_feedback_github">GitHub</string>
    <string name="test_jobs_scheduled">Scheduled job for 50-70 seconds from now.</string>
    <string name="test_jobs_success">APOD Wallpaper job scheduling works!</string>
    <string name="power_saving_warning">Power saving mode is enabled, APOD will likely not work correctly!\n\nPlease turn off power saving mode / whitelist this app by tapping here.</string>
    <string-array name="notification_colour_names">
        <item>White</item>
        <item>Silver</item>
        <item>Grey</item>
        <item>Aqua</item>
        <item>Teal</item>
        <item>Red</item>
        <item>Maroon</item>
        <item>Fuchsia</item>
        <item>Purple</item>
        <item>Lime</item>
        <item>Green</item>
        <item>Yellow</item>
        <item>Olive</item>
        <item>Blue</item>
        <item>Navy</item>
    </string-array>
    <string-array name="notification_colour_values">
        <item>#FFFFFF</item>
        <item>#C0C0C0</item>
        <item>#808080</item>
        <item>#00FFFF</item>
        <item>#008080</item>
        <item>#FF0000</item>
        <item>#800000</item>
        <item>#FF00FF</item>
        <item>#800080</item>
        <item>#00FF00</item>
        <item>#008000</item>
        <item>#FFFF00</item>
        <item>#808000</item>
        <item>#0000FF</item>
        <item>#000080</item>
    </string-array>
</resources>
