<?xml version="1.0" encoding="utf-8"?>
<TableLayout xmlns:android="http://schemas.android.com/apk/res/android"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:padding="10dp"
             android:stretchColumns="*"
             android:shrinkColumns="*">
    <TableRow>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_apod_check"
                android:textStyle="bold"
                android:padding="5dp"/>
        <TextView
                android:id="@+id/last_checked"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
    </TableRow>
    <TableRow>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_apod_pulled"
                android:textStyle="bold"
                android:padding="5dp"/>
        <TextView
                android:id="@+id/last_pulled"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
    </TableRow>
    <TableRow>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_automatic_task_run"
                android:textStyle="bold"
                android:padding="5dp"/>
        <TextView
                android:id="@+id/last_automatic_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
    </TableRow>
    <TableRow>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_automatic_task_success"
                android:textStyle="bold"
                android:padding="5dp"/>
        <TextView
                android:id="@+id/last_automatic_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
    </TableRow>
    <TableRow>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_manual_task_run"
                android:textStyle="bold"
                android:padding="5dp"/>
        <TextView
                android:id="@+id/last_manual_run"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
    </TableRow>
    <TableRow>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_manual_task_success"
                android:textStyle="bold"
                android:padding="5dp"/>
        <TextView
                android:id="@+id/last_manual_success"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
    </TableRow>
    <TableRow>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/images_saved"
                android:textStyle="bold"
                android:padding="5dp"/>
        <TextView
                android:id="@+id/images_saved"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
    </TableRow>
    <TableRow>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/image_cache_size"
                android:textStyle="bold"
                android:padding="5dp"/>
        <TextView
                android:id="@+id/images_cache"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
    </TableRow>
    <TableRow>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_filtered_date"
                android:textStyle="bold"
                android:padding="5dp"/>
        <TextView
                android:id="@+id/last_filtered_date"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
    </TableRow>
    <TableRow>
        <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/last_filtered_reason"
                android:textStyle="bold"
                android:padding="5dp"/>
        <TextView
                android:id="@+id/last_filtered_reason"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:padding="5dp"/>
    </TableRow>
</TableLayout>